tests/integration/snapshots/integration__snapshot__unpinned_uses-3.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"unpinned-uses/action.yml\")).args([\"--pedantic\"]).run()?"
---
help[unpinned-uses]: unpinned action reference
 --> @@INPUT@@:8:7
  |
8 |       uses: asdf-vm/actions/setup@v3
  |       ------------------------------ help: action is not pinned to a hash ref
  |
  = note: audit confidence → High

help[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:11:7
   |
11 |       uses: asdf-vm/actions/setup@main
   |       -------------------------------- help: action is not pinned to a hash ref
   |
   = note: audit confidence → High

2 findings: 0 unknown, 0 informational, 2 low, 0 medium, 0 high
