tests/integration/snapshots/integration__snapshot__unpinned_uses-4.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"unpinned-uses/issue-433-repro.yml\")).args([\"--pedantic\"]).run()?"
snapshot_kind: text
---
No findings to report. Good job!
